# routers

./: .gitignore  .yamllint.yml  Gemfile  default.rb  flake.nix  gemset.nix  hocho.yml  hosts.yml  pyproject.toml
playbooks/: install-mackerel.yml
playbooks/roles/install_mackerel/files/: install-mackerel-agent.sh  mackerel-agent.service
playbooks/roles/install_mackerel/handlers/: main.yml
playbooks/roles/install_mackerel/tasks/: main.yml
playbooks/roles/install_mackerel/templates/: mackerel-agent.conf.j2
playbooks/roles/localhost_mackerel/tasks/: main.yml
recipes/: border.rb  erlite.rb  nono.rb
recipes/bird/: bin.rb
recipes/bird/files/config/bird/: bird-watch.service  bird-watch.sh  bird.conf  bird.service
recipes/bird/files/config/scripts/post-config.d/: bird.sh
recipes/grafana/: default.rb
recipes/grafana/files/: grafana.ini
recipes/litestream/: default.rb
recipes/litestream/files/: litestream.yml
recipes/node_exporter/: bin.rb
recipes/node_exporter/files/: node_exporter.service
recipes/node_exporter/files/scripts/post-config.d/: node_exporter.sh
recipes/prometheus/: default.rb
recipes/prometheus/files/: prometheus.yml
recipes/promtail/: default.rb
recipes/promtail/templates/config/promtail/: config.yml
recipes/tailscale/: default.rb
recipes/tailscale/files/config/tailscale/: tailscaled-watch.service  tailscaled-watch.sh  tailscaled.service  var-lib-tailscale.mount
recipes/vyos/: default.rb
recipes/vyos/files/scripts/: vyos-preconfig-bootup.script
tools/: ansible  ansible-playbook
(+5 files in other folders)
