[project]
name = "routers"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tosuke", email = "13393900+tosuke@users.noreply.github.com" }
]
dependencies = [
    "ansible>=6.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "routers:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/routers"]
